<resources>
    <string name="app_name">Sreader</string>
    <string name="my_shelf">Sreader</string>
    <string name="root">根目录</string>
    <string name="choose_all">全选</string>
    <string name="cancel">取消</string>
    <string name="bookpop_size">字体</string>
    <string name="bookpop_light">亮度</string>
    <string name="bookpop_card">书签</string>
    <string name="bookpop_send">跳转</string>
    <string name="bookpop_dir">目录</string>
    <string name="press_twice_to_exit">连续点击两次退出</string>
    <string name="book_detail_join_collection">加入书架&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="downloading">我的下载</string>



</resources>
